# aether

./: README.md  TODO.norg  TODO.org  aether.cabal  flake.nix  hie.yaml  justfile
examples/: crop-video-cli.scm  factorial.scm  imported-factorial.scm
specs/: Main.hs  TestUtils.hs
specs/Specs/: InterpreterSpec.hs  ParserSpec.hs  ScopeSpec.hs
specs/Specs/Integration/: BuiltinsSpec.hs  InterpreterSpec.hs  StdlibSpec.hs
src/: Aether.hs
src/Aether/: Repl.hs  Runtime.hs  Types.hs
src/Aether/Runtime/: Builtins.hs  Interpreter.hs  LangIO.hs  Scope.hs  Value.hs
src/Aether/Syntax/: Parser.hs
stdlib/: core.rkt  core.scm  list.rkt  list.scm  result.scm
