cabal-version:   3.0

name:            aether
version:         0.1.0.0
license:         MIT
author:          Akshay Nair <phenax5@gmail.com>
maintainer:      Akshay Nair <phenax5@gmail.com>
build-type:      Simple
synopsis:        Aether
description:     Aether

source-repository head
  type:     git
  location: https://github.com/phenax/aether-lang.git

common common-config
  default-extensions:
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    QuasiQuotes
    RankNTypes
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    UndecidableInstances
  default-language: Haskell2010
  build-depends:
    base,
    -- bytestring,
    containers <= 0.7,
    data-default <= 0.8.0.0,
    interpolate == 0.2.1,
    megaparsec <= 9.7.0,
    mtl == 2.3.1,
    template-haskell,
    th-lift <= 0.8.6,
    text

common warnings
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wunused-foralls -Wextra -Wno-unused-do-bind -Wname-shadowing
    -Wno-unrecognised-pragmas
    -fwarn-tabs -fprint-explicit-foralls -fprint-explicit-kinds

executable aether
  import: common-config, warnings
  hs-source-dirs: bin
  main-is: Main.hs
  build-depends: lib-aether

library lib-aether
  import: common-config, warnings
  hs-source-dirs: src
  exposed-modules:
    Aether
    Aether.Runtime
    Aether.Runtime.Interpreter
    Aether.Syntax.Parser
    Aether.Types

test-suite specs
  import: common-config, warnings
  type: exitcode-stdio-1.0
  hs-source-dirs: specs
  main-is: Main.hs
  ghc-options: -Wno-name-shadowing
  other-modules:
    TestUtils
    Specs.ParserSpec
    Specs.InterpreterSpec
    Specs.Integration.InterpreterSpec
    Specs.Integration.StdlibSpec
  build-depends:
    lib-aether,
    hspec
