cabal-version:   3.0

name:            aether
version:         0.1.0.0
license:         MIT
author:          Akshay Nair <phenax5@gmail.com>
maintainer:      Akshay Nair <phenax5@gmail.com>
build-type:      Simple
synopsis:        Aether
description:     Aether

source-repository head
  type:     git
  location: https://github.com/phenax/aether-lang.git

extra-source-files:
  stdlib/*.rkt

common common-config
  default-extensions:
    BangPatterns
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    QuasiQuotes
    RankNTypes
    StandaloneDeriving
    TemplateHaskell
    TupleSections
    UndecidableInstances
  default-language: Haskell2010
  build-depends:
    base,
    -- bytestring,
    containers <= 0.7,
    -- unordered-containers <= 0.2.20,
    data-default <= 0.8.0.0,
    interpolate == 0.2.1,
    megaparsec <= 9.7.0,
    mtl == 2.3.1,
    pretty-simple <= 4.1.3.0,
    template-haskell,
    th-lift <= 0.8.6,
    text

common warnings
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wunused-foralls -Wextra -Wno-unused-do-bind -Wname-shadowing
    -Wno-unrecognised-pragmas
    -fwarn-tabs -fprint-explicit-foralls -fprint-explicit-kinds

executable aether
  import: common-config, warnings
  hs-source-dirs: bin
  main-is: Main.hs
  build-depends: lib-aether

library lib-aether
  import: common-config, warnings
  hs-source-dirs: src
  exposed-modules:
    Aether
    Aether.Runtime
    Aether.Runtime.Interpreter
    Aether.Runtime.LangIO
    Aether.Runtime.Scope
    Aether.Runtime.Value
    Aether.Syntax.Parser
    Aether.Types

test-suite specs
  import: common-config, warnings
  type: exitcode-stdio-1.0
  hs-source-dirs: specs
  main-is: Main.hs
  ghc-options: -Wno-name-shadowing
  other-modules:
    TestUtils
    Specs.Integration.InterpreterSpec
    Specs.Integration.StdlibSpec
    Specs.InterpreterSpec
    Specs.ParserSpec
    Specs.ScopeSpec
  build-depends:
    lib-aether,
    hspec
